update leetcode and yandex